--- a/page-3.html
+++ b/page-3.html
@@ -92,19 +92,19 @@
 
         <div class="form-container">
             <div class="radio-1">
-            <label for="option2">VISA</label>
+            <label for="option1"><img src="https://registercomplain.com/assets/img/visa-and-master-card.png" alt=""></label>
             <input type="radio" name="my-radio-group" value="option1" checked>
-            <label for="option2">PhonePe</label>
+            <label for="option2"><img src="https://registercomplain.com/assets/img/amazon-pay.png" alt=""></label>
             <input type="radio" name="my-radio-group" value="option2">
-            <label for="option3">PayTm</label> 
+            <label for="option3"><img src="https://registercomplain.com/assets/img/phonepe.png" alt=""></label> 
             <input type="radio" name="my-radio-group" value="option3">
-            <label for="option4">Google Pay</label> 
+            <label for="option4"><img src="https://registercomplain.com/assets/img/internet-banking.png" alt=""></label>> 
             <input type="radio" name="my-radio-group" value="option4">  
             </div>
             <div class="radio-2">
-                <label for="option5">Amazon Pay</label>  
+                <label for="option5"><img src="https://registercomplain.com/assets/img/gpay.png" alt=""></label>>  
                 <input type="radio" name="my-radio-group" value="option5">
-                <label for="option6">Net Banking</label> 
+                <label for="option6"><img src="https://registercomplain.com/assets/img/paytm.png" alt=""></label>
             <input type="radio" name="my-radio-group" value="option6">
             <label for="option7">Other</label> 
             <input type="radio" name="my-radio-group" value="option7">
