--- a/success.html
+++ b/success.html
@@ -14,7 +14,7 @@
         class="success-icon"
       />
 
-      <button class="btn-red">Submit another query</button>
+      <button class="btn-red"><a href="index.html" style="color: white; text-decoration: none;">Submit another query</a></button>
 
       <div class="download-section">
         Download our <b>Android App</b> to track your complaint status
