--- a/page-2.html
+++ b/page-2.html
@@ -72,7 +72,7 @@
         </ul>
 
         <div class="form-container">
-             <form action="/register-complaint" method="post">
+             <form>
             <div class="radio">
             <label for="option1">Refund</label>
             <input type="radio" name="my-radio-group" value="option1" checked>
@@ -84,7 +84,7 @@
 
         <input type="number" name="refund" id="refund" placeholder="Refund Amount*">
 
-        <button class="next-btn"><a  href="page-3.html"  id="next-page-link">NEXT</a></button>
+        <button class="next-btn"><a href="page-3.html"  id="next-page-link">NEXT</a></button>
     </section>
 
   </div>
